# mbot

./: .ros_selector.sh  README.md
bluesea-ros2/bluesea-ros2/params/: uart_lidar.yaml
cartographer_ros/cartographer_ros/src/: node.cpp
evobase_bringup/: CMakeLists.txt  README.md  mbot  package.xml  setup.cfg  setup.py
evobase_bringup/config/: evobase_config.yaml  tracked_config.yaml
evobase_bringup/evobase_bringup/: __init__.py  evobase_cmd_odom.py  tracked_cmd_odom.py
evobase_bringup/launch/: combined.launch.py  evobase_cmd_odom.launch.py  tracked_cmd_odom.launch.py
evobase_bringup/resource/: evobase_bringup
evobase_bringup/resource/evobase_backup/encode_code_ino/: encode_code_ino.ino  encode_code_ino.ino.bak
evobase_bringup/resource/evobase_backup/mbot_encode_0725/: mbot_encode_0725.ino
evobase_bringup/resource/tracked_backup_arduino/1角速度闭环控制连续角度里程计计算/arduino/电机pwm驱动/: tracked_pid_gai_pwm左右反了.ino.bak
evobase_bringup/resource/tracked_backup_arduino/1角速度闭环控制连续角度里程计计算/arduino/电机pwm驱动/tracked_pid_gai_pwm/: tracked_pid_gai_pwm.ino
evobase_bringup/resource/tracked_backup_arduino/1角速度闭环控制连续角度里程计计算/arduino/编码器/encoder_speed_angle_sender/: encoder_speed_angle_sender.ino
evobase_bringup/resource/tracked_backup_arduino/1角速度闭环控制连续角度里程计计算/gui_pid_test/: config.json  main_final_robust_0停止直接发pwm0.py  main_final_robust_pid参与刹车.py
evobase_bringup/scripts/: check_temp.py  dynamic_check_temp.py  get_temp.py  read_encoders_once.py  send_cmd_time_test.py
evobase_bringup/udev/: 99-differential-drive.rules  README.md  install_udev_rules.sh  test_device_mapping.sh  uninstall_udev_rules.sh
evobase_navigation2/: CMakeLists.txt  package.xml
evobase_navigation2/launch/: navigation2.launch.py  pointcloud_to_laserscan.launch.py
evobase_navigation2/maps/: 1130_check.pgm~  26_02_04_003.pgm  26_02_04_003.yaml  26_02_04_003（复件）.pgm
evobase_navigation2/param/: amr_dwb.yaml  evobase.yaml  evobase删配置24.yaml  mbot_3D.yaml
evobase_navigation2/param/evobase你的配置文件里写的： nav2_behaviors/Spin （带斜杠/: ）  新版本 Nav2 要求的： nav2_behaviors__Spin （带双冒号 __）.yaml
fishbot_navigation2/launch/: navigation2.launch.py.bak
fishbot_navigation2/maps/: neighborhood.pgm  neighborhood.yaml  test01.pgm  test01.yaml
fishbot_navigation2/param/: fishbot_backup.yaml  fishbot_nav2.yaml  fishbot（复件）.yaml  laser_filter_config.yaml  mbot_basefootprint.yaml
lidar_odom/: CMakeLists.txt  MIGRATION_GUIDE.md  README.md  package.xml
lidar_odom/config/: plicp_odometry.rviz  plicp_odometry.yaml
lidar_odom/include/plicp_odometry_ros2/: plicp_odometry.hpp
lidar_odom/launch/: plicp_odometry.launch.py
lidar_odom/src/: plicp_odometry.cpp  plicp_odometry_node.cpp
models/: 亚克力.dwg  电机封圈.STL
navigation2_jazzy/nav2_bringup/launch/: navigation_launch.py
scripts/: convert_twist.py
