<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeName="packageFormat3"?>
<package format="3">
  <name>plicp_odometry_ros2</name>
  <version>1.0.0</version>
  <description>PLICP激光雷达里程计 - ROS2版本</description>

  <maintainer email="lixiang@example.com">lixiang</maintainer>
  <license>Apache-2.0</license>

  <author email="lixiang@example.com">lixiang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2核心依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rclcpp_components</depend>

  <!-- CSM库依赖 -->
  <depend>libcsm-dev</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
